@@ -3,6 +3,7 @@
 	* using CDI library version 1.0.0
 	* New operator: dv2ps (Wind) [request: Luis Kornblueh]
 	* setreftime: use taxisDuplicate to copy bounds [report: Ivonne Anders]
+	* Seasstat: bug fix for datasets with only 1 season [report: Simon Blessing]
 	* Vertint: remove special treatment for geopoth
 	* configure: check compiler version
 	* Version 1.0.0 released
